0.2.1 (Fixed Spacing on Paper and link to home)

--- a/style.css
+++ b/style.css
@@ -465,7 +465,7 @@ ul {
     list-style-type: none;
     overflow:hidden;
     position:sticky;
-    height:70px;
+    /* height:70px; */
     width: auto;
 }
 
